# embedding-experiments

./: main.py  pyproject.toml  requirements.txt  test.ipynb
