[project]
name = "embedding-experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
]
